unpackaged/main/default/objects/Show_Occurrence_Public__c/Show_Occurrence_Public__c.object-meta.xml
<CustomObject>
    <description>Copy of Show Occurrences object for use by Platform Edition users.</description>
    <label>Opportunity Public</label>
    <nameField>
        <label>Opportunity Public Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities Public</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>