unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities Public (Account)</relationshipLabel>
    <relationshipName>R00N40000001plKDEAY</relationshipName>
    <type>Lookup</type>
</CustomField>