unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <length>30</length>
    <type>Text</type>
</CustomField>