unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Actual_Freight_Weight_CWT__c.field-meta.xml
<CustomField>
    <fullName>Actual_Freight_Weight_CWT__c</fullName>
    <label>Actual Freight Weight (CWT)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>