unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Actual_Net_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Actual_Net_Square_Feet__c</fullName>
    <label>Actual Net Square Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>