unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Adv_Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Adv_Shipping_Name__c</fullName>
    <label>Adv. Shipping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>