unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Adv_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Adv_Shipping_Postal_Code__c</fullName>
    <label>Adv. Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>