unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Adv_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Adv_Shipping_Street__c</fullName>
    <label>Adv. Shipping Street</label>
    <type>TextArea</type>
</CustomField>