unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Advance_Shipping_Site__c.field-meta.xml
<CustomField>
    <fullName>Advance_Shipping_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Shipping Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Show_Opportunity_Public1</relationshipName>
    <type>Lookup</type>
</CustomField>