unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Assignment_Change_in_Control__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Change_in_Control__c</fullName>
    <label>Assignment / Change in Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>