unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Booth_Length__c.field-meta.xml
<CustomField>
    <fullName>Booth_Length__c</fullName>
    <label>Booth Length</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>