unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Booth_Package__c.field-meta.xml
<CustomField>
    <fullName>Booth_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booth Package</label>
    <type>Checkbox</type>
</CustomField>