unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Booth_Package_Price__c.field-meta.xml
<CustomField>
    <fullName>Booth_Package_Price__c</fullName>
    <label>Booth Package Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>