unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Booth_Type__c.field-meta.xml
<CustomField>
    <fullName>Booth_Type__c</fullName>
    <label>Booth Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corner</fullName>
            </value>
            <value>
                <fullName>Inline</fullName>
            </value>
            <value>
                <fullName>Island</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Pavilion</fullName>
            </value>
            <value>
                <fullName>Peninsula</fullName>
            </value>
            <value>
                <fullName>Perimeter</fullName>
            </value>
            <value>
                <fullName>Permanent Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>