unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Booth_Width__c.field-meta.xml
<CustomField>
    <fullName>Booth_Width__c</fullName>
    <label>Booth Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>