unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/BoothNum__c.field-meta.xml
<CustomField>
    <fullName>BoothNum__c</fullName>
    <label>Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>