unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Insufficient Budget</fullName>
            </value>
            <value>
                <fullName>Will Create Business Case for Sufficient Budget</fullName>
            </value>
            <value>
                <fullName>Sufficient Budget - Not Approved</fullName>
            </value>
            <value>
                <fullName>Sufficient, Approved Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>