unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Cart_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Cart_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Client approved contract with new cart addendum included</inlineHelpText>
    <label>Cart Addendum</label>
    <type>Checkbox</type>
</CustomField>