unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Competition_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Competition_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competition Restrictions</label>
    <type>Checkbox</type>
</CustomField>