unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Conference_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Conference_End_Date__c</fullName>
    <inlineHelpText>End date inclusive of education sessions/exhibits</inlineHelpText>
    <label>Conference End Date</label>
    <type>Date</type>
</CustomField>