unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration__c</fullName>
    <label>Contract Expiration</label>
    <type>Date</type>
</CustomField>