unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/CR_Date__c.field-meta.xml
<CustomField>
    <fullName>CR_Date__c</fullName>
    <label>Contract Received Date</label>
    <type>Date</type>
</CustomField>