unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Creative_Strategy_Only__c.field-meta.xml
<CustomField>
    <fullName>Creative_Strategy_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creative/Strategy Only</label>
    <type>Checkbox</type>
</CustomField>