unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Custom_Furniture_Discount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Furniture_Discount__c</fullName>
    <inlineHelpText>Contractual Custom Furniture Discount %.</inlineHelpText>
    <label>Custom Furniture Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>