unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Date_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Loaded__c</fullName>
    <label>Date Loaded</label>
    <type>Date</type>
</CustomField>