unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Days_Until_Show_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Show_Open__c</fullName>
    <description>This formula shows the number of days until show open (exhibition open date) if the show open date is less than 140 days (20 weeks) away.</description>
    <inlineHelpText>This formula shows the number of days until show open (exhibition open date) if the show open date is less than 140 days (20 weeks) away.</inlineHelpText>
    <label>Days Until Show Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>