unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/E_D_Competitor__c.field-meta.xml
<CustomField>
    <fullName>E_D_Competitor__c</fullName>
    <label>Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>