unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/EAC__c.field-meta.xml
<CustomField>
    <fullName>EAC__c</fullName>
    <label>EAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>