unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/EAC_Deadline__c.field-meta.xml
<CustomField>
    <fullName>EAC_Deadline__c</fullName>
    <label>EAC Deadline</label>
    <type>Date</type>
</CustomField>