unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Early_Order_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Early_Order_Deadline__c</fullName>
    <label>Early Order Deadline</label>
    <type>Date</type>
</CustomField>