unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Public2</relationshipName>
    <type>Lookup</type>
</CustomField>