unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Exhibit_Hall_Hours_Day_2__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hall_Hours_Day_2__c</fullName>
    <inlineHelpText>Show Hours Day 2.</inlineHelpText>
    <label>Exhibit Hall Hours Day 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>