unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Exhibit_Hall_Hours_Day_5__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Hall_Hours_Day_5__c</fullName>
    <inlineHelpText>Show Hours Day 5.</inlineHelpText>
    <label>Exhibit Hall Hours Day 5</label>
    <length>25</length>
    <type>Text</type>
</CustomField>