unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Exhibitor_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Move_In_Date__c</fullName>
    <label>Exhibitor Move-In Date</label>
    <type>Date</type>
</CustomField>