unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Exhibitor_Satisfaction_Score_GES_SAT__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Satisfaction_Score_GES_SAT__c</fullName>
    <label>Exhibitor Satisfaction Score (GES SAT)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>