unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N40000001plKOEAY</relationshipName>
    <type>Lookup</type>
</CustomField>