unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
            <value>
                <fullName>R3</fullName>
            </value>
            <value>
                <fullName>R4</fullName>
            </value>
            <value>
                <fullName>R5</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>