unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Furniture_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Furniture_Allowance__c</fullName>
    <inlineHelpText>Contractual Furniture $ Allowance.</inlineHelpText>
    <label>Furniture Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>