unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/GBMS_Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>GBMS_Workflow_Status__c</fullName>
    <label>GBMS Workflow Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>