unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/GES_Move_In__c.field-meta.xml
<CustomField>
    <fullName>GES_Move_In__c</fullName>
    <inlineHelpText>GES Move in Day 1.</inlineHelpText>
    <label>GES Move-In Date 1</label>
    <type>Date</type>
</CustomField>