unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/GES_Move_Out_Date_1_Hours__c.field-meta.xml
<CustomField>
    <fullName>GES_Move_Out_Date_1_Hours__c</fullName>
    <inlineHelpText>GES Move-Out Day 1 Hours.</inlineHelpText>
    <label>GES Move-Out Date 1 Hours</label>
    <length>25</length>
    <type>Text</type>
</CustomField>