unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Holidays__c.field-meta.xml
<CustomField>
    <fullName>Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holidays?</label>
    <type>Checkbox</type>
</CustomField>