unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Intellecutal_Property_Rights_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Intellecutal_Property_Rights_Ownership__c</fullName>
    <label>Intellecutal Property Rights Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>