unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Is_Amount_populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Amount_populated__c</fullName>
    <label>Is Amount populated?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>