unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Job_Class__c.field-meta.xml
<CustomField>
    <fullName>Job_Class__c</fullName>
    <inlineHelpText>Job Classification Code.</inlineHelpText>
    <label>Job Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>