unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <externalId>true</externalId>
    <label>Job Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>