unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Job_Number_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Number_Status__c</fullName>
    <inlineHelpText>This is used for integration purposes to ensure record is sent only once to receive a job # from LMS.</inlineHelpText>
    <label>Job Number Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>