unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Labor_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Labor_Allowance__c</fullName>
    <inlineHelpText>Contractual Labor $ Allowance.</inlineHelpText>
    <label>Labor Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>