unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Lead_Nurture_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Nurture_Source__c</fullName>
    <label>Lead Nurture Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Generation Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>