unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/LMS_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_Facility_ID__c</fullName>
    <inlineHelpText>Facility ID (acronym)</inlineHelpText>
    <label>Facility ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>