unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/LMS_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Status_Date__c</fullName>
    <label>LMS Status Date</label>
    <type>Date</type>
</CustomField>