unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/LOB_Contracting_Count_US__c.field-meta.xml
<CustomField>
    <fullName>LOB_Contracting_Count_US__c</fullName>
    <description>Utility is to provide report filtering within the LOB Reports folder. Automatically populated with Process - Opportunity LOB Count Flow Launcher. References formula field - LOB Category. Tyler@vertiba.com</description>
    <label>LOB Contracting Count US</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>