unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Date__c</fullName>
    <inlineHelpText>Date GES lost bid</inlineHelpText>
    <label>Lost Date</label>
    <type>Date</type>
</CustomField>