unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Marketing_Company__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Company__c</fullName>
    <inlineHelpText>Company providing marketing services to exhibition organizer</inlineHelpText>
    <label>Marketing Company</label>
    <type>TextArea</type>
</CustomField>