unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/MarketWorks_Assigned_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>MarketWorks_Assigned_Team_Member__c</fullName>
    <inlineHelpText>MW team member assigned bid/project</inlineHelpText>
    <label>MarketWorks Assigned Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cathy Hopkins</fullName>
            </value>
            <value>
                <fullName>David Saef</fullName>
            </value>
            <value>
                <fullName>Regan Cook</fullName>
            </value>
            <value>
                <fullName>Steve Duberchin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>