unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/MarketWorks_Engagement__c.field-meta.xml
<CustomField>
    <fullName>MarketWorks_Engagement__c</fullName>
    <inlineHelpText>Degree to which MW is involved in bid</inlineHelpText>
    <label>MarketWorks Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>