unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/MarketWorks_Value__c.field-meta.xml
<CustomField>
    <fullName>MarketWorks_Value__c</fullName>
    <inlineHelpText>Estimated or actual value of MW project</inlineHelpText>
    <label>MarketWorks Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>