unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Material_Handling_Rate__c.field-meta.xml
<CustomField>
    <fullName>Material_Handling_Rate__c</fullName>
    <inlineHelpText>Straight Time Show Site Created</inlineHelpText>
    <label>Showsite Created ST Rate</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>