unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Most_Favored_Nations_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Most_Favored_Nations_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Favored Nations Pricing</label>
    <type>Checkbox</type>
</CustomField>