unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Move_Out__c.field-meta.xml
<CustomField>
    <fullName>Move_Out__c</fullName>
    <inlineHelpText>Date when exhibitors start move out</inlineHelpText>
    <label>Exhibitor Move-Out Date</label>
    <type>Date</type>
</CustomField>