unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Multi_Year_Step__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year_Step__c</fullName>
    <inlineHelpText>Define what year in the contract this occurrence represents.</inlineHelpText>
    <label>Contract Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 of 0</fullName>
            </value>
            <value>
                <fullName>1 of 1</fullName>
            </value>
            <value>
                <fullName>1 of 2</fullName>
            </value>
            <value>
                <fullName>2 of 2</fullName>
            </value>
            <value>
                <fullName>1 of 3</fullName>
            </value>
            <value>
                <fullName>2 of 3</fullName>
            </value>
            <value>
                <fullName>3 of 3</fullName>
            </value>
            <value>
                <fullName>1 of 4</fullName>
            </value>
            <value>
                <fullName>2 of 4</fullName>
            </value>
            <value>
                <fullName>3 of 4</fullName>
            </value>
            <value>
                <fullName>4 of 4</fullName>
            </value>
            <value>
                <fullName>1 of 5</fullName>
            </value>
            <value>
                <fullName>2 of 5</fullName>
            </value>
            <value>
                <fullName>3 of 5</fullName>
            </value>
            <value>
                <fullName>4 of 5</fullName>
            </value>
            <value>
                <fullName>5 of 5</fullName>
            </value>
            <value>
                <fullName>1 of 6</fullName>
            </value>
            <value>
                <fullName>2 of 6</fullName>
            </value>
            <value>
                <fullName>3 of 6</fullName>
            </value>
            <value>
                <fullName>4 of 6</fullName>
            </value>
            <value>
                <fullName>5 of 6</fullName>
            </value>
            <value>
                <fullName>6 of 6</fullName>
            </value>
            <value>
                <fullName>1 of 7</fullName>
            </value>
            <value>
                <fullName>2 of 7</fullName>
            </value>
            <value>
                <fullName>3 of 7</fullName>
            </value>
            <value>
                <fullName>4 of 7</fullName>
            </value>
            <value>
                <fullName>5 of 7</fullName>
            </value>
            <value>
                <fullName>6 of 7</fullName>
            </value>
            <value>
                <fullName>7 of 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>