unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Name_Show_Occ_Ref__c.field-meta.xml
<CustomField>
    <fullName>Name_Show_Occ_Ref__c</fullName>
    <formula>IF( Name = Show_Occurrence_Ref__r.Name, TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name = Show Occ Ref</label>
    <type>Checkbox</type>
</CustomField>