unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Nature_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Service__c</fullName>
    <label>Nature of Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>