unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Net_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Net_Square_Feet__c</fullName>
    <inlineHelpText>Be careful when changing the label as it may affect existing merge templates.</inlineHelpText>
    <label>Estimated Net Square Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>