unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/New_Repeat__c.field-meta.xml
<CustomField>
    <fullName>New_Repeat__c</fullName>
    <label>New/Repeat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>