unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Non_Show_Custom__c.field-meta.xml
<CustomField>
    <fullName>Non_Show_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Show</label>
    <referenceTo>Non_Show__c</referenceTo>
    <relationshipName>Show_Opportunity_Public</relationshipName>
    <type>Lookup</type>
</CustomField>