unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Number_of_Booths__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Booths__c</fullName>
    <inlineHelpText>Estimated Number of 10&#39;x10&#39; or 10&#39;x8&#39; booth units.</inlineHelpText>
    <label>Estimated Number of Booths</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>