unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Number_of_Exhibitors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exhibitors__c</fullName>
    <inlineHelpText>Estimated Number of Exhibiting Companies.</inlineHelpText>
    <label>Estimated Number of Exhibitors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>