unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Overall_Show_Organizer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Overall_Show_Organizer_Discount__c</fullName>
    <inlineHelpText>Contractual Show Organizer Discount $ or %.</inlineHelpText>
    <label>Overall Show Organizer Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>