unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Portables__c.field-meta.xml
<CustomField>
    <fullName>Portables__c</fullName>
    <label>Portables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>