unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRF_EGRetail_Kiosk_Qty__c.field-meta.xml
<CustomField>
    <fullName>PRF_EGRetail_Kiosk_Qty__c</fullName>
    <label>Kiosk Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>