unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRF_EGRetail_REDO__c.field-meta.xml
<CustomField>
    <fullName>PRF_EGRetail_REDO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>REDO</label>
    <type>Checkbox</type>
</CustomField>